tests/invalid/Constant_Invalid_2.whiley
method main():
    int a = Constants[5]
